# visualvault

./: .clippy.toml  .codecov.yml  .gitignore  .markdownlint.yml  .rustfmt.toml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  nextest.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documention-issue.yml  feature-request.yml  performance-issue.yml  question.yml
.github/workflows/: benchmark.yml  ci.yml  codspeed.yml  dependencies.yml  release.yml
bench/: data.js  index.html
bench/duplicate_detection/1000/base/: estimates.json  sample.json
bench/duplicate_detection/1000/change/: estimates.json
bench/duplicate_detection/1000/new/: estimates.json
bench/duplicate_detection/1000/report/: index.html
bench/duplicate_detection/10000/base/: estimates.json  tukey.json
bench/duplicate_detection/10000/new/: benchmark.json  sample.json
bench/duplicate_detection/10000/report/: index.html
bench/duplicate_detection/10000_2/base/: estimates.json  sample.json  tukey.json
bench/duplicate_detection/10000_2/change/: estimates.json
bench/duplicate_detection/10000_2/new/: sample.json
bench/duplicate_detection/1000_2/base/: tukey.json
bench/duplicate_detection/1000_2/change/: estimates.json
bench/duplicate_detection/1000_2/new/: benchmark.json  estimates.json  sample.json  tukey.json
bench/duplicate_detection/5000/base/: sample.json
bench/duplicate_detection/5000/change/: estimates.json
bench/duplicate_detection/5000/new/: tukey.json
bench/duplicate_detection/5000/report/: index.html
bench/duplicate_detection/5000_2/base/: benchmark.json  estimates.json
bench/duplicate_detection/5000_2/new/: sample.json
bench/duplicate_detection/5000_2/report/: index.html
bench/duplicate_ratios/10%/base/: estimates.json
bench/duplicate_ratios/10%/change/: estimates.json
bench/duplicate_ratios/10%/new/: tukey.json
bench/duplicate_ratios/10%/report/: index.html
bench/duplicate_ratios/30%/base/: benchmark.json  sample.json  tukey.json
bench/duplicate_ratios/30%/change/: estimates.json
bench/duplicate_ratios/30%/new/: estimates.json  tukey.json
bench/duplicate_ratios/50%/base/: sample.json
bench/duplicate_ratios/50%/change/: estimates.json
bench/duplicate_ratios/50%/new/: estimates.json  sample.json  tukey.json
bench/duplicate_ratios/50%/report/: index.html
bench/duplicate_ratios/70%/base/: benchmark.json  estimates.json  tukey.json
bench/duplicate_ratios/70%/change/: estimates.json
bench/duplicate_ratios/70%/new/: sample.json
bench/organize_by_type/100/base/: tukey.json
bench/organize_by_type/100/change/: estimates.json
bench/organize_by_type/100/new/: benchmark.json  estimates.json  sample.json
bench/organize_by_type/100/report/: index.html
bench/organize_by_type/1000/base/: sample.json
bench/organize_by_type/1000/change/: estimates.json
bench/organize_by_type/1000/new/: tukey.json
bench/organize_by_type/1000/report/: index.html
bench/organize_by_type/500/base/: estimates.json  tukey.json
bench/organize_by_type/500/new/: sample.json  tukey.json
bench/organize_by_type/500/report/: index.html
bench/organize_by_type/report/: index.html
bench/organize_modes/monthly/base/: benchmark.json  estimates.json
bench/organize_modes/monthly/change/: estimates.json
bench/organize_modes/monthly/new/: sample.json  tukey.json
bench/organize_modes/monthly/report/: index.html
bench/organize_modes/type/base/: sample.json
bench/organize_modes/type/new/: tukey.json
bench/organize_modes/type/report/: index.html
bench/organize_modes/yearly/change/: estimates.json
bench/organize_modes/yearly/new/: tukey.json
bench/organize_modes/yearly/report/: index.html
bench/report/: index.html
bench/scanner/100/base/: tukey.json
bench/scanner/100/change/: estimates.json
bench/scanner/100/new/: estimates.json
bench/scanner/100/report/: index.html
bench/scanner/1000/base/: estimates.json  sample.json
bench/scanner/1000/change/: estimates.json
bench/scanner/1000/report/: index.html
bench/scanner/5000/base/: sample.json
bench/scanner/5000/change/: estimates.json
bench/scanner/5000/new/: tukey.json
bench/scanner/5000/report/: index.html
bench/scanner_parallel/report/: index.html
benches/: duplicate_benchmark.rs  organizer_benchmark.rs  scanner_benchmark.rs
crates/app/: Cargo.toml
crates/app/src/: actions.rs  duplicates.rs  filters.rs  handlers.rs  lib.rs  mod.rs  navigation.rs  state.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  database_cache.rs  duplicate_detector.rs  file_cache.rs  file_manager.rs  lib.rs  organizer.rs  scanner.rs  undo_manager.rs
crates/models/: Cargo.toml
crates/models/src/: duplicate.rs  filters.rs  lib.rs  media_file.rs  state.rs  statistics.rs
crates/ui/: Cargo.toml
crates/ui/src/: dashboard.rs  duplicate_detector.rs  file_details.rs  filtering.rs  lib.rs  progress.rs  search.rs  settings.rs
crates/utils/: Cargo.toml
crates/utils/src/: bytes.rs  folder_stats.rs  lib.rs  media_types.rs  path.rs  progress.rs
dev/bench/: data.js
new-results/: benchmark-output.txt  output.txt  performance-report.md
scripts/: convert_benchmark_output.py
src/: app.rs  lib.rs  main.rs
src/app/: actions.rs  app_old.rs  duplicates.rs  filters.rs  handlers.rs  navigation.rs  state.rs
src/config/: settings.rs
src/core/: duplicate_detector.rs  file_cache.rs  file_manager.rs  mod.rs  organizer.rs  scanner.rs  statistics.rs  undo_manager.rs
src/models/: filters.rs  media_file.rs  mod.rs  statistics.rs
src/ui/: dashboard.rs  duplicate_detector.rs  file_details.rs  filtering.rs  mod.rs  progress.rs  search.rs  settings.rs
src/utils/: bytes.rs  datetime.rs  file_utils.rs  folder_stats.rs  media_types.rs  mod.rs  progress.rs
tests/: system_tests.rs
tests/integration/: mod.rs  organizer.rs  scanner.rs
tests/system/: workflow.rs
(+15 files in other folders)
