[package]
name = "visualvault"
version = "0.4.2"
edition = "2024"
rust-version = "1.85"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]
description = "A modern, terminal-based media file organizer built with Rust"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mikeleppane/visualvault"
repository = "https://github.com/mikeleppane/visualvault"
keywords = [
    "media",
    "organizer",
    "terminal",
    "tui",
    "file-management",
    "ratatui",
]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
sha2 = "0.10"
image = "0.25"
regex = "1.10"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.17.0"
rayon = "1.10.0"
ahash = { version = "0.8", features = ["serde"] }
[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5"

[dev-dependencies]
tempfile = "3.20"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
color-eyre = "0.6"
chrono = "0.4"
criterion = { version = "3.0.4", package = "codspeed-criterion-compat" }
proptest = "1.7"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[[test]]
name = "system"
path = "tests/system_tests.rs"

[[bench]]
name = "scanner_benchmark"
harness = false

[[bench]]
name = "organizer_benchmark"
harness = false

[[bench]]
name = "duplicate_benchmark"
harness = false

[lib]
bench = false

[[bin]]
name = "visualvault"
path = "src/main.rs"
bench = false
