[package]
name = "visualvault-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
visualvault-config = { workspace = true }
visualvault-core = { workspace = true }
visualvault-models = { workspace = true }
visualvault-utils = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
ahash = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
num_cpus = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.20"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
color-eyre = "0.6"
chrono = "0.4"
criterion = { version = "3.0.4", package = "codspeed-criterion-compat" }
proptest = "1.7"
