[package]
name = "visualvault-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
num_cpus = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.20"
