[package]
name = "visualvault-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
visualvault-models = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
